<resources>


    <!-- IMPORTANT: REPLAVE THE STRING BELOW WITH THE NEW NAME YOU'LL GIVE TO THIS APP -->
    <string name="app_name">بنينة</string>


    <!-- IMPORTANT: REPLACE THE STRING BELOW WITH YOUR OWN BANNER UNIT ID YOU'LL GET FROM http://apps.admob.com -->
    <string name="ADMOB_BANNER_UNIT_ID">ca-app-pub-9733347540588953/7805958028</string>


    <!-- IMPORTANT: REPLACE THE STRING BELOW WITH YOUR OWN FACEBOOK APP ID YOU'LL GET ON https://developers.facebook.com/apps/ -->
    <string name="facebook_app_id">1361109130667700</string>
    <string name="account">الحساب</string>
    <string name="you_re_not_logged_in_or_registered_want_to_do_it_now">You\'re not logged in or registered. Want to do it now?</string>
    <string name="login">الدخول</string>
    <string name="loading">تحميل…</string>

    <string name="edit_profile">تغييؤ البيانات</string>
    <string name="activity">النشاطات</string>
    <string name="my_recipes">أطباقي</string>
    <string name="liked_recipes">أطباقي المحبوبة</string>
    <string name="recipes">الوصفات</string>
    <string name="shopping">قائمة المشتريات</string>
    <string name="welcome">مرحبا بكم في تطبيق <b><font color='#ed3851'> بنينة</font></b></string>


</resources>
