<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_facebook_button_login_silver_background_color"
    tools:context=".Account"
    >



    <!-- TOP BAR -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:layoutDirection="rtl">

        <TextView
            android:id="@+id/accTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/account"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/accAddRecipeButt"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/transparent"
            android:text="+"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/accLogoutButt"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/logout_butt"
            android:backgroundTint="@color/white"/>
    </RelativeLayout>







    <RelativeLayout
        android:id="@+id/accNoUserLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/admobBanner"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layoutDirection="rtl">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/you_re_not_logged_in_or_registered_want_to_do_it_now"
            android:textAlignment="center"
            android:textColor="#333"
            android:textSize="12sp"/>
        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/loginback"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layoutDirection="rtl">



            <Button
                android:id="@+id/accLoginButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </RelativeLayout>





    <RelativeLayout
        android:id="@+id/accMainLayout"
        android:background="@color/com_facebook_button_login_silver_background_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/admobBanner"
        android:layout_below="@+id/relativeLayout"
        android:layoutDirection="rtl"

        >


        <ImageView
            android:id="@+id/accBkgImg"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            ads:srcCompat="@drawable/backgroud"
            android:contentDescription="TODO" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/epAvatarImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/splashlogo"
            ads:civ_border_color="#fff"
            ads:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/accFullnametxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/epAvatarImg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/loading"
            android:textAlignment="textStart"
            android:textColor="#333"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/accAboutMeTxt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/accFullnametxt"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:maxLines="3"
            android:text="@string/loading"
            android:textColor="#333"
            android:textSize="10sp"/>

        <Button
            android:id="@+id/accEditProfileButt"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignEnd="@+id/accFullnametxt"
            android:layout_alignTop="@+id/epAvatarImg"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textSize="10sp"/>

        <Button
            android:id="@+id/accActivityButty"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignTop="@+id/accEditProfileButt"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@+id/accEditProfileButt"
            android:backgroundTint="@color/com_facebook_button_border_color_focused"
            android:text="@string/activity"
            android:textAllCaps="false"
            android:textSize="10sp"/>

        <ListView
            android:id="@+id/accMyRecipesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/accBkgImg"
            android:divider="@color/common_google_signin_btn_text_light_disabled"
            android:dividerHeight="1dp"/>

        <GridView
            android:id="@+id/accLikedRecipesGridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/accBkgImg"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accAboutMeTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/accMyRecipesRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/my_recipes"
                android:textSize="11sp"
                android:textStyle="bold"
                android:buttonTint="#333"/>

            <RadioButton
                android:id="@+id/accLikedRecipesRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/liked_recipes"
                android:textColor="#444"
                android:textSize="11sp"
                android:textStyle="bold"
                android:buttonTint="#333333"/>
        </LinearLayout>


    </RelativeLayout>



    <!-- ADMOB BANNER VIEW -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/admobBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ADMOB_BANNER_UNIT_ID">
    </com.google.android.gms.ads.AdView>




    <!-- TAB BAR -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tab_one"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/home_butt"
            android:backgroundTint="#000"
            android:paddingTop="25dp"
            android:text="الوصفات"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="9sp" />

        <Button
            android:id="@+id/tab_two"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="60dp"
            android:background="@drawable/shopping_butt"
            android:backgroundTint="#555"
            android:paddingTop="25dp"
            android:text="المشتريات"
            android:textAllCaps="false"
            android:textColor="#555"
            android:textSize="9sp" />

        <Button
            android:id="@+id/tab_three"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="60dp"
            android:background="@drawable/account_butt"
            android:backgroundTint="@color/colorPrimaryDark"
            android:paddingTop="25dp"
            android:text="الحساب"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="9sp" />
    </LinearLayout>
</RelativeLayout>
